# microservices-mqtt

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml  python-publish_test.yml
src/microservice-mqtt/: microservice.py  microserviceclient.py
src/microservicemqtt/: microservice.py  microserviceclient.py
src/microservices-mqtt/: microservice.py
