[metadata]
name = microservice-mqtt
version = 0.1.1
author = Timo Zimmermann
author_email = github@timozimmermann.de
description = A microservice client/server implementation based on JSON-RPC over MQTT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrbluesky125/microservices-mqtt
project_urls =
    Bug Tracker = https://github.com/mrbluesky125/microservices-mqtt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src